--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "electron-quick-start-typescript",
+  "name": "calendar-electron",
   "version": "1.0.0",
   "description": "A minimal Electron application written with Typescript",
+  "main": "./dist/main.js",
   "scripts": {
-    "build": "tsc",
+    "build:back": "tsc --project tsconfig_back.json --watch",
+    "build:front": "tsc --project tsconfig_front.json --watch",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "electron ./dist/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -24,6 +26,10 @@
     "@typescript-eslint/parser": "^4.33.0",
     "electron": "^24.3.0",
     "eslint": "^7.32.0",
-    "typescript": "^4.8.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "mysql2": "^3.4.5"
   }
 }
