--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:front": "tsc --project tsconfig_front.json --watch",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "electron ./dist/main.js"
+    "start": "electron ./dist/back/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
