--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A minimal Electron application written with Typescript",
   "main": "./dist/main.js",
   "scripts": {
-    "build:back": "tsc --project tsconfig_back.json --watch",
-    "build:front": "tsc --project tsconfig_front.json --watch",
-    "watch": "tsc -w",
+    "build:back": "tsc --project tsconfig_back.json",
+    "build:front": "tsc --project tsconfig_front.json",
+    "build": "npm run build:back && npm run build:front",
+    "watch:back": "tsc --project tsconfig_back.json --watch",
+    "watch:front": "tsc --project tsconfig_front.json --watch",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
-    "start": "electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
@@ -30,6 +32,6 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "mysql2": "^3.4.5"
+    "sql.js": "^1.14.0"
   }
 }
